Added proper test for repositorymanager